Modificado web config para añadir la cadena de conexión

--- a/c0415egrupo/GestorAtributosWeb/Web.config
+++ b/c0415egrupo/GestorAtributosWeb/Web.config
@@ -52,9 +52,14 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    </providers>    
   </entityFramework>
+  <connectionStrings>
+    <add name="GestorDB"
+         connectionString="Data Source=(localdb)\c0415egrupo;Database=c0415egrupo;Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
