--- a/c0415egrupo/GestorAtributosWeb/Web.config
+++ b/c0415egrupo/GestorAtributosWeb/Web.config
@@ -59,7 +59,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="GestorDB"
-         connectionString="Data Source=(localdb)\c0415egrupo;Database=c0415egrupo;Integrated Security=SSPI;"
+         connectionString="Data Source=(LocalDB)\c0415egrupo;Database=c0415egrupo;Integrated Security=SSPI;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
