--- a/c0415egrupo/GestorAtributosWeb.Tests/GestorAtributosWeb.Tests.csproj
+++ b/c0415egrupo/GestorAtributosWeb.Tests/GestorAtributosWeb.Tests.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriasTest.cs" />
     <Compile Include="AtributoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
